Paginas de video chamada e anotações adicionadas

--- a/Public/CSS/sass/partials/_videoGrid.scss
+++ b/Public/CSS/sass/partials/_videoGrid.scss
@@ -143,6 +143,12 @@
 				font-size: 20px;
 			}
 		}
+		ul {
+			padding: 1rem;
+			li {
+				margin-bottom: 1rem;
+			}
+		}
 	}
 	#todasAnotacoes {
 		height: 80%;
