--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -86,10 +86,8 @@
                             <h2>Informações</h2>
                         </div>
                         <div>
-                            <div>
-                                {{teste.mensgaemdeboasvindas}}
-                            </div>
                             <ul>
+                                <li>{{teste.mensgaemdeboasvindas}}</li>
                                 <li>Site URL: {{teste.url}}</li>
                                 <li>Cenário {{teste.cenario}}</li>
                                 {{#each teste.tarefas as |tarefa|}}
