--- a/Views/Testes/teste.hbs
+++ b/Views/Testes/teste.hbs
@@ -135,7 +135,7 @@
                         </div>
                     </a>
 
-                    <a href="">
+                    <a href="/testes/{{teste._id}}/gravacoesanotcacoes">
                         <div class="gravacoes">
                             <h2> Gravações e Anotações</h2>
                             <p>Veja aqui todas as gravações e <br>anotações realizadas</p>
