--- a/Views/Layouts/loginLayout.hbs
+++ b/Views/Layouts/loginLayout.hbs
@@ -1,7 +1,12 @@
 
 
     {{{body}}}
-
+     <!-- footer -->
+        <footer id="rodape" class="footerLogin">
+            <p><span class="footer__copyright">&copy;</span> Ally 2020</p>
+            <a href="/contato">Entre em contato</a>
+        </footer>
+        <!-- / footer -->
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
