--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -12,32 +12,39 @@
 
 
 <body>
-{{!-- skip links --}}
-<ul class="skip-links">
-  
-    <li><a href="#conteudo">Pular para conteúdo</a></li>
-  
-</ul>
-{{!-- / skip links --}}
+    {{!-- skip links --}}
+    <ul class="skip-links">
+
+        <li><a href="#conteudo">Pular para conteúdo</a></li>
+        <li><a href="#rodape">Pular para rodapé</a></li>
+
+    </ul>
+    {{!-- / skip links --}}
+
+    <header id="logoLogin">
+        <a href="/">
+            <img src="/Imagens/logo-ally.svg" alt="Logo do Ally">
+        </a>
+    </header>
     <main id="conteudo">
-        <header>
-            <a href="/">
-                <img src="/Imagens/logo-ally.svg" alt="Logo do Ally" id="logoLogin">
-            </a>
-        </header>
         <section id="loginSection">
             <div class="container">
-                <h1>Entrar</h1>
+                <h1>Criar login</h1>
                 <form action="/users/login" method="POST">
-                    <div>
+                    <div class="campo">
                         <label for="email">Email</label>
                         <input id="email" type="email" name='email' placeholder="Insira seu e-mail">
                     </div>
-                    <div>
+                    <div class="campo">
+
                         <label for="password">Senha</label>
-                        <input id="password" type="password" name="password" placeholder="Digite sua senha">
+                        <div class="mostrar-senha">
+                            <input class="active" id="password" type="password" name="password"
+                                placeholder="Digite sua senha">
+                            {{!-- <button id="btn-senha" aria-hidden="true">Mostrar</button> --}}
+                        </div>
                     </div>
-                    <div>
+                    <div class="campo">
                         <input value="Login" type="submit">
                     </div>
                 </form>
@@ -59,3 +66,25 @@
         </section>
 
     </main>
+
+    <script>
+        var inputPass3 = document.getElementById('password'),
+            btn = document.getElementById('btn-senha');
+
+        btn.onclick = function () {
+
+            if (inputPass3.className == 'active') {
+                inputPass3.setAttribute('type', 'text');
+                btn.textContent = 'Esconder';
+                inputPass3.className = '';
+                btn.classList.add("btn-active");
+
+            } else {
+                inputPass3.setAttribute('type', 'password');
+                btn.textContent = 'Mostrar';
+                inputPass3.className = 'active';
+                btn.classList.remove("btn-active");
+            }
+
+        }
+    </script>
