--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -1,73 +1,131 @@
-<header>
-    <a href="/">
-        <img src="\Imagens\Logo.svg" alt="Logo do Ally" id="logoLogin">
-    </a>
-</header>
-<section id="loginSection">
-    <main>
-        <h1>Crie uma Conta</h1>
-        {{#if tester}}
-        <form action="/users/register/tester" method="POST">
-            <div>
-                <label for="nome">Nome</label>
-                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
-                    value={{tipoDiferente nome 'undefined'}}>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                    value={{tipoDiferente email 'undefined'}}>
-            </div>
-            <div>
-                <label for="senha">Senha</label>
-                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <label for="senha2">Confirmar senha</label>
-                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <input value="Criar Conta" type="submit">
-            </div>
-        </form>
-        {{else}}
-        <form action="/users/register" method="POST">
-            <div>
-                <label for="nome">Nome</label>
-                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
-                    value={{tipoDiferente nome 'undefined'}}>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                    value={{tipoDiferente email 'undefined'}}>
-            </div>
-            <div>
-                <label for="senha">Senha</label>
-                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <label for="senha2">Confirmar senha</label>
-                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <input value="Criar Conta" type="submit">
-            </div>
-        </form>
-        {{/if}}
-        <div class="ou">Ou</div>
-        <div class="google-btn" role="button">
-            <a aria-label="Link para entrar usando o google" href="/users/login/google">
-                <div "google-icon-wrapper">
-                    <img class="google-icon"
-                        src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
-                        alt="Icone do Goole">
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Login Teste seu Site - Ally</title>
+</head>
+
+
+<body>
+    {{!-- skip links --}}
+    <ul class="skip-links">
+
+        <li><a href="#conteudo">Pular para conteúdo</a></li>
+        <li><a href="#rodape">Pular para rodapé</a></li>
+
+    </ul>
+    {{!-- / skip links --}}
+
+    <header id="logoLogin">
+        <a href="/">
+            <img src="/Imagens/logo-ally.svg" alt="Logo do Ally" >
+        </a>
+    </header>
+    <main id="conteudo">
+        <section id="loginSection">
+            <div class="container">
+                <h1>Crie uma Conta</h1>
+                {{#if tester}}
+                <form action="/users/register/tester" method="POST">
+                    <div class="campo">
+                        <label for="nome">Nome</label>
+                        <input placeholder="Como quer ser chamado?" id="nome" type="text" name='nome'
+                            value={{tipoDiferente nome 'undefined'}}>
+                    </div>
+                    <div class="campo">
+                        <label for="email">Email</label>
+                        <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
+                            value={{tipoDiferente email 'undefined'}}>
+                    </div>
+                    <div class="campo">
+                        <label for="senha">Senha</label>
+                        <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
+                         <div class="mostrar-senha">
+                            <input class="active" id="password" type="password" name="password"
+                                placeholder="Digite sua senha">
+                            <button id="btn-senha" aria-hidden="true">Mostrar</button>
+                        </div>
+                    </div>
+                    <div class="campo">
+                        <label for="senha2">Confirmar senha</label>
+                        <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
+                         <div class="mostrar-senha">
+                            <input class="active" id="password" type="password" name="password"
+                                placeholder="Digite sua senha">
+                            <button id="btn-senha" aria-hidden="true">Mostrar</button>
+                        </div>
+                    </div>
+                    <div>
+                        <input value="Criar Conta" type="submit">
+                    </div>
+                </form>
+                {{else}}
+                <form action="/users/register" method="POST">
+                    <div class="campo">
+                        <label for="nome">Nome</label>
+                        <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
+                            value={{tipoDiferente nome 'undefined'}}>
+                    </div>
+                    <div class="campo">
+                        <label for="email">Email</label>
+                        <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
+                            value={{tipoDiferente email 'undefined'}}>
+                    </div>
+                    <div class="campo">
+                        <label for="senha">Senha</label>
+                        <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
+                    </div>
+                    <div class="campo">
+                        <label for="senha2">Confirmar senha</label>
+                        <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
+                    </div>
+                    <div class="campo">
+                        <input value="Criar Conta" type="submit">
+                    </div>
+                </form>
+                {{/if}}
+                <div class="ou">Ou</div>
+                <div class="google-btn" role="button">
+                    <a aria-label="Link para entrar usando o google" href="/users/login/google">
+                        <div "google-icon-wrapper">
+                            <img class="google-icon"
+                                src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+                                alt="Icone do Goole">
+                        </div>
+                        <span class="btn-text">Continuar com Google</span>
+                    </a>
                 </div>
-                <span class="btn-text">Continuar com Google</span>
-            </a>
-        </div>
-        {{!-- <div class="npossui">
+                {{!-- <div class="npossui">
             Ja possui conta?<a href="/users/login">Entre aqui</a>
         </div> --}}
+            </div>
+        </section>
+
     </main>
-</section>
+
+        {{!-- <script>
+        var inputPass3 = document.getElementById('password'),
+            btn = document.getElementById('btn-senha');
+
+        btn.onclick = function () {
+
+            if (inputPass3.className == 'active') {
+                inputPass3.setAttribute('type', 'text');
+                btn.textContent = 'Esconder';
+                inputPass3.className = '';
+                btn.classList.add("btn-active");
+
+            } else {
+                inputPass3.setAttribute('type', 'password');
+                btn.textContent = 'Mostrar';
+                inputPass3.className = 'active';
+                btn.classList.remove("btn-active");
+            }
+
+        }
+    </script> --}}
