--- a/Public/CSS/sass/partials/_videoGrid.scss
+++ b/Public/CSS/sass/partials/_videoGrid.scss
@@ -185,6 +185,8 @@
 					width: 100%;
 					display: flex;
 					flex-direction: column;
+					opacity: 0;
+					transition: opacity .1s ease-in;
 					div:first-child {
 						font-size: 1rem;
 						padding: 0 .7rem .6rem .2rem;
@@ -197,6 +199,10 @@
 						border-radius: 10px;
 						word-wrap: break-word;
 					}
+				}
+
+				li.animacaoAnotacao {
+					opacity: 1;
 				}
 			}
 		}
