--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -1623,6 +1623,8 @@ div.contentDashboard div.grid div#calendar button {
   width: 100%;
   display: flex;
   flex-direction: column;
+  opacity: 0;
+  transition: opacity 0.1s ease-in;
 }
 #anotacoes #todasAnotacoes #wrapper ul li div:first-child {
   font-size: 1rem;
@@ -1635,6 +1637,9 @@ div.contentDashboard div.grid div#calendar button {
   padding: 1rem;
   border-radius: 10px;
   word-wrap: break-word;
+}
+#anotacoes #todasAnotacoes #wrapper ul li.animacaoAnotacao {
+  opacity: 1;
 }
 #anotacoes form {
   height: 20%;
