--- a/Views/Partials/_sidebar.hbs
+++ b/Views/Partials/_sidebar.hbs
@@ -30,9 +30,8 @@
 <aside class="sidenav" >
     <button class="close">Fechar</button>
     <div class="logo">
-        <a  href="/"><img src="/Imagens/logo-ally.svg" alt="Logo do Ally"></a>
+        <a  href="/"><img src="/Imagens/logo-ally.svg" alt="Voltar para página inicial"></a>
     </div>
-
     <nav id="menu" class="main-nav" aria-label="Navegação principal">
         <ul class="navList">
             <li class="item">
