--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -50,8 +50,6 @@ $width-sidenav: 210px;
   }
 }
 
-
-
 // header dashboard
 .headerDashboard {
   grid-area: header;
@@ -217,7 +215,6 @@ $width-sidenav: 210px;
   font-size: 16px;
   border-radius: 0.25rem;
   margin: 10px 25px 0;
-
 
   .breadcrumb-item + .breadcrumb-item::before {
     display: inline-block;
@@ -630,7 +627,7 @@ main.comTestes {
     color: var(--color-black);
     &:hover {
       color: var(--color-blue);
-      } 
+    }
   }
 }
 
@@ -689,11 +686,14 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
 .dashboardTester {
   padding: 4rem;
   line-height: 1.6;
+  display: flex;
+  grid-gap: 15px;
 
   .info {
     background: #fffef7;
     color: var(--color-black);
-    padding: 3rem 30rem 4rem 5rem;
+    padding: 3rem 4rem 4rem 5rem;
+    width: 50%;
 
     h2 {
       font-weight: 700;
@@ -706,12 +706,7 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
     }
   }
 
-  .testes {
-    display: flex;
-    grid-gap: 15px;
-
-    margin-top: 3rem;
-
+  .convites {
     h3 {
       font-size: 26px;
     }
@@ -719,83 +714,84 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
     p {
       font-size: 18px;
     }
+    background: #fbfbfd;
+    padding: 5rem 2rem 6rem;
+    text-align: center;
+    width: 50%;
 
-    .convites {
-      background: #fbfbfd;
-      padding: 5rem 2rem 6rem;
-      text-align: center;
-      width:60%;
+    table {
+      width: 100%;
 
-      table {
-        width: 100%;
-
-        thead {
-          th {
-            color: var(--color-blue);
-    text-align: initial;
-    font-size: 18px;
-          }
-        }
-
-        tbody {
-          tr {
-            background: var(--color-white);
-            box-shadow: 0px 4px 9px rgba(163, 163, 163, 0.1);
-          }
-
-          td {
-            padding: 16px 5px;
-          }
-
-          .btn-action {
-            display: flex;
-            justify-content: flex-end;
-            
-          }
-
-          button {
-            background: none;
-            padding: 8px 15px;
-            border-radius: 50px;
-            margin-right: 10px;
-            font-size: 15px;
-            cursor: pointer;
-
-
-          }
-          
+      thead {
+        th {
+          color: var(--color-blue);
+          text-align: initial;
+          font-size: 18px;
         }
       }
 
-      .red {
-        border: 3px solid var(--color-red);
-        transition: 0.2s;
-      
-        &:hover {
-          background: var(--color-red);
-          color: var(--color-white);
-          transition: 0.2s;
+      tbody {
+        tr {
+          background: var(--color-white);
+          box-shadow: 0px 4px 9px rgba(163, 163, 163, 0.1);
         }
-      }
-      
-      .blue {
-        border: 3px solid var(--color-blue);
-        transition: 0.2s;
-        &:hover {
-          background: var(--color-blue);
-          color: var(--color-white);
-          transition: 0.2s;
+
+        td {
+          padding: 16px 5px;
+        }
+
+        .btn-action {
+          display: flex;
+          justify-content: flex-end;
+        }
+
+        button {
+          background: none;
+          padding: 8px 15px;
+          border-radius: 50px;
+          margin-right: 10px;
+          font-size: 15px;
+          cursor: pointer;
         }
       }
     }
-    .testes-realizados {
-      background: #ff5f7d05;
-      padding: 5rem 4rem 6rem;
-      text-align: center;
-      width:40%;
+
+    .red {
+      border: 3px solid var(--color-red);
+      transition: 0.2s;
+
+      &:hover {
+        background: var(--color-red);
+        color: var(--color-white);
+        transition: 0.2s;
+      }
+    }
+
+    .blue {
+      border: 3px solid var(--color-blue);
+      transition: 0.2s;
+      &:hover {
+        background: var(--color-blue);
+        color: var(--color-white);
+        transition: 0.2s;
+      }
     }
   }
 }
+
+// .testes {
+//   display: flex;
+//   grid-gap: 15px;
+
+//   margin-top: 3rem;
+
+//   .testes-realizados {
+//     background: #ff5f7d05;
+//     padding: 5rem 4rem 6rem;
+//     text-align: center;
+//     width: 40%;
+//   }
+// }
 
 // pagina rever gravacoes e anotacoes
 .gravacoesAnotacoes {
