--- a/Views/Layouts/loginLayout.hbs
+++ b/Views/Layouts/loginLayout.hbs
@@ -14,12 +14,15 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js">
+    </script>
     <noscript>Seu navegador não dá suporte a javascript</noscript>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <noscript>Seu navegador não dá suporte a javascript</noscript>  
     <script>
         new window.VLibras.Widget(' https://vlibras.gov.br/app');
     </script>
+    
 </body>
 
 </html>
