--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <link rel="stylesheet" href="/CSS/theme.css">
-    <title>Login Teste seu Site - Ally</title>
+    <title>Login - Ally</title>
 </head>
 
 
 <body>
-<<<<<<< HEAD
     {{!-- skip links --}}
     <ul class="skip-links">
 
@@ -30,7 +29,7 @@
     <main id="conteudo">
         <section id="loginSection">
             <div class="container">
-                <h1>Criar login</h1>
+                <h1>Entrar</h1>
                 <form action="/users/login" method="POST">
                     <div class="campo">
                         <label for="email">Email</label>
@@ -42,38 +41,10 @@
                         <div class="mostrar-senha">
                             <input class="active" id="password" type="password" name="password"
                                 placeholder="Digite sua senha">
-                            {{!-- <button id="btn-senha" aria-hidden="true">Mostrar</button> --}}
+                            <span id="btn-senha" tabindex="0" aria-hidden="true">Mostrar</span>
                         </div>
                     </div>
                     <div class="campo">
-=======
-{{!-- skip links --}}
-<ul class="skip-links">
-  
-    <li><a href="#conteudo">Pular para conteúdo</a></li>
-  
-</ul>
-{{!-- / skip links --}}
-    <main id="conteudo">
-        <header>
-            <a href="/">
-                <img src="/Imagens/logo-ally.svg" alt="Logo do Ally" id="logoLogin">
-            </a>
-        </header>
-        <section id="loginSection">
-            <div class="container">
-                <h1>Entrar</h1>
-                <form action="/users/login" method="POST">
-                    <div>
-                        <label for="email">Email</label>
-                        <input id="email" type="email" name='email' placeholder="Insira seu e-mail">
-                    </div>
-                    <div>
-                        <label for="password">Senha</label>
-                        <input id="password" type="password" name="password" placeholder="Digite sua senha">
-                    </div>
-                    <div>
->>>>>>> master
                         <input value="Login" type="submit">
                     </div>
                 </form>
@@ -93,16 +64,17 @@
                 </div>
             </div>
         </section>
-<<<<<<< HEAD
 
     </main>
 
+<noscript>Seu navegador não dá suporte a javascript</noscript>  
     <script>
+
         var inputPass3 = document.getElementById('password'),
             btn = document.getElementById('btn-senha');
 
         btn.onclick = function () {
-
+          
             if (inputPass3.className == 'active') {
                 inputPass3.setAttribute('type', 'text');
                 btn.textContent = 'Esconder';
@@ -117,8 +89,6 @@
             }
 
         }
-    </script>
-=======
 
-    </main>
->>>>>>> master
+
+    </script>
