--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt">
 
@@ -8,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <link rel="stylesheet" href="/CSS/theme.css">
-    <title>Login Teste seu Site - Ally</title>
+    <title>Cadastro - Ally</title>
 </head>
 
 
@@ -24,76 +23,123 @@
 
     <header id="logoLogin">
         <a href="/">
-            <img src="/Imagens/logo-ally.svg" alt="Logo do Ally" >
+            <img src="/Imagens/logo-ally.svg" alt="Logo do Ally">
         </a>
     </header>
+
+
+
     <main id="conteudo">
         <section id="loginSection">
             <div class="container">
                 <h1>Crie uma Conta</h1>
+
+                {{!-- criar conta tester --}}
                 {{#if tester}}
                 <form action="/users/register/tester" method="POST">
-                    <div class="campo">
-                        <label for="nome">Nome</label>
-                        <input placeholder="Como quer ser chamado?" id="nome" type="text" name='nome'
-                            value={{tipoDiferente nome 'undefined'}}>
-                    </div>
-                    <div class="campo">
-                        <label for="email">Email</label>
-                        <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                            value={{tipoDiferente email 'undefined'}}>
-                    </div>
-                    <div class="campo">
-                        <label for="senha">Senha</label>
-                        <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
-                         <div class="mostrar-senha">
-                            <input class="active" id="password" type="password" name="password"
-                                placeholder="Digite sua senha">
-                            <button id="btn-senha" aria-hidden="true">Mostrar</button>
+
+                    <fieldset>
+                        <legend class="sr-only">Informações para cadastro</legend>
+                        <div class="campo">
+                            <label for="nome">Nome</label>
+                            <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
+                                value='{{tipoDiferente nome 'undefined'}}'>
                         </div>
-                    </div>
-                    <div class="campo">
-                        <label for="senha2">Confirmar senha</label>
-                        <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
-                         <div class="mostrar-senha">
-                            <input class="active" id="password" type="password" name="password"
-                                placeholder="Digite sua senha">
-                            <button id="btn-senha" aria-hidden="true">Mostrar</button>
+                        <div class="campo">
+                            <label for="email">Email</label>
+                            <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
+                                value='{{tipoDiferente email 'undefined'}}'>
                         </div>
-                    </div>
-                    <div>
+
+                        <div class="campo">
+                            <label for="senha">Senha</label>
+                            <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
+                             <p class="legend">Sua senha deve ter no mínimo 6 caracteres.</p>
+                        </div>
+
+                        <div class="campo">
+                            <label for="senha2">Confirmar senha</label>
+                            <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
+                        </div>
+                       
+                       
+
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>Apenas mais algumas informações</legend>
+                        <div class="campo">
+                            <label for="idade">Idade</label>
+                            <input min="16" placeholder="Insira sua idade" id="idade" type="number" name='idade'
+                                value='{{tipoDiferente idade 'undefined'}}'>
+                        </div>
+                        <div class="campo">
+                            <label for="profissao">Profissão</label>
+                            <input placeholder="Insira sua Profissão" id="profissao" type="text" name='profissao'
+                                value='{{tipoDiferente profissao 'undefined'}}'>
+                        </div>
+                        <div class="campo">
+                            <label for="deficiencia">Tipo de deficiência</label>
+                            <input id="deficiencia" type="text" name="deficiencia"
+                                placeholder="Qual tipo de deficiência você possui? ">
+                        </div>
+                    </fieldset>
+
+                    <div class="campo">
                         <input value="Criar Conta" type="submit">
+
                     </div>
                 </form>
+{{!-- / criar conta tester --}}
+
+
+                {{!-- criar conta empresa --}}
                 {{else}}
                 <form action="/users/register" method="POST">
                     <div class="campo">
                         <label for="nome">Nome</label>
                         <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
-                            value={{tipoDiferente nome 'undefined'}}>
+                            value='{{tipoDiferente nome 'undefined'}}'>
                     </div>
                     <div class="campo">
                         <label for="email">Email</label>
                         <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                            value={{tipoDiferente email 'undefined'}}>
+                            value='{{tipoDiferente email 'undefined'}}'>
                     </div>
                     <div class="campo">
                         <label for="senha">Senha</label>
-                        <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
+                        <div class="mostrar-senha">
+
+                            <input class="active" id="senha" type="password" name="senha"
+                                placeholder="Digite sua senha">
+                            <span id="btn-senha" tabindex="0" aria-hidden="true">Mostrar</span>
+                        </div>
+                         <p class="legend">Sua senha deve ter no mínimo 6 caracteres.</p>
+
                     </div>
                     <div class="campo">
                         <label for="senha2">Confirmar senha</label>
-                        <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
+                        <div class="mostrar-senha">
+                            <input class="active" id="senha2" type="password" name="senha2"
+                                placeholder="Digite sua senha">
+                            <span id="btn-senha2" tabindex="0" aria-hidden="true">Mostrar</span>
+                        </div>
+                       
                     </div>
+
                     <div class="campo">
                         <input value="Criar Conta" type="submit">
                     </div>
                 </form>
+
                 {{/if}}
+                {{!-- /criar conta empresa --}}
+
+
                 <div class="ou">Ou</div>
-                <div class="google-btn" role="button">
+                <div class="google-btn">
                     <a aria-label="Link para entrar usando o google" href="/users/login/google">
-                        <div "google-icon-wrapper">
+                        <div class="google-icon-wrapper">
                             <img class="google-icon"
                                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
                                 alt="Icone do Goole">
@@ -103,99 +149,19 @@
                 </div>
                 {{!-- <div class="npossui">
             Ja possui conta?<a href="/users/login">Entre aqui</a>
-        </div> --}}
+        </div>  --}}
             </div>
         </section>
 
-=======
-<header>
-    <a href="/">
-        <img src="\Imagens\Logo.svg" alt="Logo do Ally" id="logoLogin">
-    </a>
-</header>
-<section id="loginSection">
-    <main>
-        <h1>Crie uma Conta</h1>
-        {{#if tester}}
-        <form action="/users/register/tester" method="POST">
-            <div>
-                <label for="nome">Nome</label>
-                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
-                    value={{tipoDiferente nome 'undefined'}}>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                    value={{tipoDiferente email 'undefined'}}>
-            </div>
-            <div>
-                <label for="idade">Idade</label>
-                <input min="16" placeholder="Insira sua idade" id="idade" type="number" name='idade'
-                    value={{tipoDiferente idade 'undefined'}}>
-            </div>
-            <div>
-                <label for="profissao">Profissão</label>
-                <input placeholder="Insira sua Profissão" id="profissao" type="text" name='profissao'
-                    value={{tipoDiferente profissao 'undefined'}}>
-            </div>
-            <div>
-                <label for="deficiencia">Tipo de deficiência</label>
-                <input id="deficiencia" type="text" name="deficiencia" placeholder="Qual tipo de deficiência você possui? ">
-            </div>
-            <div>
-                <label for="senha">Senha</label>
-                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <label for="senha2">Confirmar senha</label>
-                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <input value="Criar Conta" type="submit">
-            </div>
-        </form>
-        {{else}}
-        <form action="/users/register" method="POST">
-            <div>
-                <label for="nome">Nome</label>
-                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
-                    value={{tipoDiferente nome 'undefined'}}>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
-                    value={{tipoDiferente email 'undefined'}}>
-            </div>
-            <div>
-                <label for="senha">Senha</label>
-                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <label for="senha2">Confirmar senha</label>
-                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
-            </div>
-            <div>
-                <input value="Criar Conta" type="submit">
-            </div>
-        </form>
-        <div class="ou">Ou</div>
-        <div class="google-btn" role="button">
-            <a aria-label="Link para entrar usando o google" href="/users/login/google">
-                <div "google-icon-wrapper">
-                    <img class="google-icon"
-                        src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
-                        alt="Icone do Goole">
-                </div>
-                <span class="btn-text">Continuar com Google</span>
-            </a>
-        </div>
-        {{/if}}
->>>>>>> master
     </main>
 
-        {{!-- <script>
-        var inputPass3 = document.getElementById('password'),
-            btn = document.getElementById('btn-senha');
+
+<noscript>Seu navegador não dá suporte a javascript</noscript>  
+    <script>
+        var inputPass3 = document.getElementById('senha'),
+            inputPass4 = document.getElementById('senha2'),
+            btn = document.getElementById('btn-senha'),
+            btn2 = document.getElementById('btn-senha2');
 
         btn.onclick = function () {
 
@@ -213,4 +179,22 @@
             }
 
         }
-    </script> --}}
+
+        btn2.onclick = function () {
+            if (inputPass4.className == 'active') {
+                inputPass4.setAttribute('type', 'text');
+                btn2.textContent = 'Esconder';
+                inputPass4.className = '';
+                btn2.classList.add("btn-active");
+
+            } else {
+                inputPass4.setAttribute('type', 'password');
+                btn2.textContent = 'Mostrar';
+                inputPass4.className = 'active';
+                btn2.classList.remove("btn-active");
+            }
+
+        }
+    </script>
+
+  
