--- a/Views/Partials/_convites.hbs
+++ b/Views/Partials/_convites.hbs
@@ -37,7 +37,7 @@
 
 
 {{#if convites}}
-
+{{!-- 
 <div class="convites">
     <h3>Convites</h3>
 
@@ -54,15 +54,15 @@
 
             {{#each convites as |convite|}}
             <tr>
-                <td>{{convite.userNome}}Exemplo</td>
+                <td>{{convite.userNome}}</td>
                 <td class="btn-action">
                     <button
-                        {{!-- onclick="aceitarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')" --}}
+                        onclick="aceitarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
                         class="blue">
                         Aceitar
                     </button>
                     <button
-                        {{!-- onclick="recusarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')" --}}
+                        onclick="recusarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
                         id="recusarBtn" class="red">
                         Recusar
                     </button>
@@ -72,43 +72,87 @@
 
     </table>
 
-<<<<<<< HEAD
-
-
-=======
->>>>>>> master
 
 
 
 
-<<<<<<< HEAD
+</div>  --}}
+
+<main id="conteudo" class="semConvites">
+    <section class="dashboardTester">
+        <div class="info">
+            <h2>Olá {{nome}}!</h2>
+            <p>Aqui é o espaço onde as empresas irão te convidar para realizar os testes. Assim que o convite for
+                enviado,
+                aparecerá a solicitação logo abaixo.</p>
+        </div>
+        <div class="convites">
+            <h3>Convites</h3>
 
 
-=======
->>>>>>> master
-</div>
+            
+            <table class="striped">
+        <caption class="sr-only">Convites Recebidos</caption>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>&nbsp;</th>
+
+            </tr>
+        </thead>
+        <tbody>
+
+            {{#each convites as |convite|}}
+            <tr>
+                <td>{{convite.userNome}}</td>
+                <td class="btn-action">
+                    <button
+                        onclick="aceitarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
+                        class="blue">
+                        Aceitar
+                    </button>
+                    <button
+                        onclick="recusarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
+                        id="recusarBtn" class="red">
+                        Recusar
+                    </button>
+                </td>
+            </tr>
+            {{/each}}
+
+    </table>
+        </div>
+
+    </section>
+
+</main>
+
 
 
 {{else}}
 
-<main id="conteudo" class="dashboardTester semConvites">
-    <section class="info">
-        <h2>Olá {{nome}}!</h2>
-        <p>Aqui é o espaço onde as empresas irão te convidar para realizar os testes. Assim que o convite for enviado,
-            aparecerá a solicitação logo abaixo.</p>
-    </section>
-
-    <section class="testes">
+<main id="conteudo" class="semConvites">
+    <section class="dashboardTester">
+        <div class="info">
+            <h2>Olá {{nome}}!</h2>
+            <p>Aqui é o espaço onde as empresas irão te convidar para realizar os testes. Assim que o convite for
+                enviado,
+                aparecerá a solicitação logo abaixo.</p>
+        </div>
         <div class="convites">
             <h3>Convites</h3>
             <p>Você ainda não possui nenhum convite.</p>
         </div>
 
-        <div class="testes-realizados">
+    </section>
+
+    {{!-- <section class="testes"> --}}
+
+    {{!-- <div class="testes-realizados">
             <h3>Testes realizados</h3>
             <p>Não há testes realizados.</p>
-        </div>
-    </section>
+        </div> --}}
+    {{!-- </section> --}}
 </main>
 {{/if}}
 
