--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -87,13 +87,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li>{{teste.mensgaemdeboasvindas}}</li>
-                                <li>Site URL: {{teste.url}}</li>
-                                <li>Cenário {{teste.cenario}}</li>
-                                {{#each teste.tarefas as |tarefa|}}
-                                <li>Tarefa: {{tarefa}}</li>
-                                    
-                                {{/each}}
+                                <li>Site URL: <a href="teste.url">{{teste.url}}</a></li>
                             </ul>
                         </div>
                     </div>
